[package]
name = "filecoin-proofs-api"
version = "6.1.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.13", default-features = false }
bincode = "1.1.2"
serde = "1.0.104"
#filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~6.0.0", default-features = false, features = ["gpu"] }
#filecoin-hashers = { version = "~1.0.1", default-features = false, features = ["poseidon", "sha256"] }
filecoin-proofs-v1 = { package = "filecoin-proofs", git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "feat-aggregation", default-features = false, features = ["gpu"] }
filecoin-hashers = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "feat-aggregation", default-features = false, features = ["poseidon", "sha256"] }
storage-proofs-core = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "feat-aggregation", default-features = false, features = ["gpu"] }
fr32 = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "feat-aggregation", default-features = false, features = ["gpu"] }
bellperson = { version = "0.13", default-features = false, features = ["gpu"] }

[features]
default = ["pairing"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing", "storage-proofs-core/pairing", "fr32/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst", "storage-proofs-core/blst", "fr32/blst"]

[patch.crates-io]
paired = { git = "https://github.com/filecoin-project/paired", branch = "ser-de" }
fff = { git = "https://github.com/filecoin-project/ff", branch = "ser-de" }
groupy = { git = "https://github.com/filecoin-project/group", branch = "ser-de" }
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "ser-de" }
bellperson = { git = "https://github.com/filecoin-project/bellman", branch = "feat-ipp2" }
